--- a/proyecto/style/style_mozo.css
+++ b/proyecto/style/style_mozo.css
@@ -26,8 +26,8 @@ body {
 }
 .form-formulario {
   width: 400px;
+  height: 590px;
   background: #24303c; 
-/*  background-image: url("image11.png"); */
   padding: 30px;/*30  */
   margin: auto;
   margin-top: 50px;
@@ -35,6 +35,7 @@ body {
   font-family: "calibri";
   color: white;
   box-shadow: 1px 13px 37px #000;
+  margin-bottom: 100px;
 }
 
 .form-formulario h4 {
@@ -109,7 +110,7 @@ body {
 
 .textarea{
 
-    /* resize: none; */
+    padding: 10px;
     width: 100%;
     height: 70px;
     border: 1px solid #4caf50;
@@ -127,9 +128,10 @@ body {
   border-radius: 5px;
 }
 
-/* .contenedor{
-
-  background-image: url("carta1.jpg");
-  width: 80%;
-  
-} */
+.warnings{
+ /*  width: 200px; */
+  text-align: center;
+  margin-top: auto;
+  color: #4caf50;
+  padding: 20px;
+}
